--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,10 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open --hot"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/HarshTheGarg/odinBook/issues"
   },
-  "homepage": "https://github.com/HarshTheGarg/odinBook#readme"
+  "homepage": "https://github.com/HarshTheGarg/odinBook#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.1",
+    "webpack": "^5.84.1",
+    "webpack-cli": "^5.1.1"
+  }
 }
