--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,11 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.2",
     "@babel/preset-react": "^7.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "babel-loader": "^9.1.2",
+    "eslint": "^8.41.0",
+    "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
