--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -2,13 +2,13 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true,
+        "es2022": true,
         "node": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
+        // "plugin:@typescript-eslint/recommended"
     ],
     "overrides": [
     ],
