--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,6 +9,7 @@
         "eslint:recommended",
         "plugin:react/recommended",
         // "plugin:@typescript-eslint/recommended"
+        "prettier"
     ],
     "overrides": [
     ],
