--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,10 @@
     "@typescript-eslint/parser": "^5.59.7",
     "babel-loader": "^9.1.2",
     "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.1",
+    "prettier": "2.8.8",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
