--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,12 @@
   "homepage": "https://github.com/HarshTheGarg/odinBook#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
