--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serverStart": "nodemon router.js"
+    "serverStart": "nodemon app.js"
   },
   "repository": {
     "type": "git",
