--- a/client/package.json
+++ b/client/package.json
@@ -29,12 +29,15 @@
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.1",
     "prettier": "2.8.8",
+    "prop-types": "^15.8.1",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   }
 }
