--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.2",
     "@babel/preset-react": "^7.22.0",
+    "@redux-devtools/extension": "^3.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "babel-loader": "^9.1.2",
@@ -30,6 +31,7 @@
     "html-webpack-plugin": "^5.5.1",
     "prettier": "2.8.8",
     "prop-types": "^15.8.1",
+    "redux-logger": "^3.0.6",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
