--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1"
   },
