--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,9 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@material-design-icons/svg": "^0.14.9",
     "@reduxjs/toolkit": "^1.9.5",
+    "@svgr/webpack": "^8.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
