--- a/server/package.json
+++ b/server/package.json
@@ -20,18 +20,18 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.5.0",
+    "mongodb": "^5.9.2",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.3"
   }
 }
